Added mongo and connected it to user service

--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -1,6 +1,6 @@
 services:
-  server:
+  user:
     build:
       target: dev
     volumes:
-      - ./src:/usr/src/app/src
+      - ./user/src:/usr/src/app/src
