--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -42,7 +42,8 @@ EXPOSE 3000
 CMD pnpm start
 
 FROM base as dev
-COPY . .
+COPY ./package.json .
 RUN pnpm install
+COPY . .
 EXPOSE 3000
 CMD pnpm dev
