--- a/message/package.json
+++ b/message/package.json
@@ -7,8 +7,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "socket.io": "^4.7.2"
   },
   "name": "message",
   "version": "1.0.0",
