--- a/user/package.json
+++ b/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "user",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "start": "node --experimental-specifier-resolution=node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "docs": "typedoc"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +17,9 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.3",
-    "jsdoc": "^4.0.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.25.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
