--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@tanstack/react-query": "^4.35.3",
     "expo": "~49.0.11",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
