--- a/message/tsconfig.json
+++ b/message/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDirs": ["src"],
     "outDir": "dist",
-    "lib": ["es2020"],
+    "lib": ["es2020", "DOM"],
     "target": "es2020",
     "module": "ESNext",
     "moduleResolution": "Node",
