--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.72.4",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
