--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@tanstack/react-query": "^4.35.3",
+    "@types/react-native-keyboard-spacer": "^0.4.3",
     "expo": "~49.0.11",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
