--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "chat-mobile",
-    "slug": "chat-mobile",
+    "name": "Echo",
+    "slug": "Echo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#1C1B1F"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,11 +20,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#1C1B1F"
       }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
     }
   }
 }
